[package]
name = "use-sql-clause"
description = "SQL clause label and ordering primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-clause"
keywords = ["sql", "clause", "query", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
