[package]
name = "use-sql-column"
description = "SQL column name, reference, table qualification, and alias primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-column"
keywords = ["sql", "column", "table", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[dependencies]
use-sql-ident.workspace = true
use-sql-table.workspace = true

[lints]
workspace = true
