[package]
name = "use-sql-dialect"
description = "Lightweight SQL dialect and dialect-family labels for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-dialect"
keywords = ["sql", "dialect", "database", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
