[package]
name = "use-sql-expression"
description = "Lightweight SQL expression and predicate primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-expression"
keywords = ["sql", "expression", "predicate", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[dependencies]
use-sql-column.workspace = true
use-sql-ident.workspace = true
use-sql-operator.workspace = true
use-sql-param.workspace = true
use-sql-value.workspace = true

[lints]
workspace = true
