[package]
name = "use-sql-ident"
description = "SQL identifier, alias, qualified-name, quoting, and normalization primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-ident"
keywords = ["sql", "identifier", "validation", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
