[package]
name = "use-sql-operator"
description = "Common SQL comparison, logical, null, and pattern operator primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-operator"
keywords = ["sql", "operator", "predicate", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
