[package]
name = "use-sql-query"
description = "SQL query kind, intent, safety, and classification primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-query"
keywords = ["sql", "query", "classification", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
