[package]
name = "use-sql-schema"
description = "SQL schema, database, namespace, and search-path primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-schema"
keywords = ["sql", "schema", "namespace", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[dependencies]
use-sql-ident.workspace = true

[lints]
workspace = true
