[package]
name = "use-sql-table"
description = "SQL table name, reference, schema, and alias primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-table"
keywords = ["sql", "table", "schema", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[dependencies]
use-sql-ident.workspace = true
use-sql-schema.workspace = true

[lints]
workspace = true
