[package]
name = "use-sql-type"
description = "Common SQL type-name and type-modifier primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-type"
keywords = ["sql", "type", "schema", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
