[package]
name = "use-sql-value"
description = "Simple SQL literal and value primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-sql-value"
keywords = ["sql", "literal", "value", "rustuse"]
categories = ["database", "data-structures", "development-tools"]

[lints]
workspace = true
